--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -70,9 +70,9 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/HPIS-Lab/HPIS-Lab-Website'
     content_dir: content
-    branch: master
+    branch: main
   avatar:
     gravatar: false
     shape: circle
